2005-06-09 David Brown <dmlb2000@excite.com>
	* ALL: created spell