@@ -29,9 +29,9 @@
 -	install -m 755 mac2unix /usr/local/bin
 -	install -m 644 mac2unix.1 /usr/local/man/man1
 +	install -m 755 dos2unix /usr/bin
-+	install -m 644 dos2unix.1 /usr/man/man1
++	install -m 644 dos2unix.1 /usr/share/man/man1
 +	install -m 755 unix2dos /usr/bin
-+	install -m 644 unix2dos.1 /usr/man/man1
++	install -m 644 unix2dos.1 /usr/share/man/man1
 +	install -m 755 mac2unix /usr/bin
-+	install -m 644 mac2unix.1 /usr/man/man1
++	install -m 644 mac2unix.1 /usr/share/man/man1
  
