@@ -1,2 +1,6 @@
+2005-11-05 Jason Flatt <jflatt@sourcemage.org>
+	* Makefile.patch: Modified to put man files in their correct location
+	  (to fix bug # 10064).
+
 2005-06-09 David Brown <dmlb2000@excite.com>
 	* ALL: created spell
